add a logo and a screenshot gallery to project sheets
